--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -5,10 +5,10 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.news.body
-    - field.field.node.news.field_image
     - field.field.node.news.field_metatag
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_vih_banner
+    - field.field.node.news.field_vih_image
     - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
@@ -41,8 +41,8 @@ third_party_settings:
     group_content:
       children:
         - field_image
+        - field_vih_image
         - body
-        - field_paragraphs
         - field_vih_paragraphs
         - field_news_tags
       parent_name: ''
@@ -85,7 +85,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 19
+    weight: 20
     settings:
       rows: 9
       summary_rows: 3
@@ -96,19 +96,6 @@ content:
     type: datetime_timestamp
     weight: 29
     settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_image:
-    type: entity_browser_file
-    weight: 18
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
     third_party_settings: {  }
     region: content
   field_metatag:
@@ -129,6 +116,19 @@ content:
   field_vih_banner:
     type: entity_browser_file
     weight: 17
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
+  field_vih_image:
+    type: entity_browser_file
+    weight: 19
     settings:
       entity_browser: image_browser
       field_widget_remove: true
