--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -5,10 +5,10 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
-    - field.field.node.news.field_image
     - field.field.node.news.field_metatag
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_vih_banner
+    - field.field.node.news.field_vih_image
     - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
@@ -44,10 +44,10 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_image: true
   field_metatag: true
   field_news_tags: true
   field_vih_banner: true
+  field_vih_image: true
   langcode: true
   links: true
   scheduled_update: true
