--- a/config/sync/views.view.long_courses.yml
+++ b/config/sync/views.view.long_courses.yml
@@ -1,11 +1,10 @@
 uuid: 5c19634d-0a7b-4e99-8673-9f861b9d8f3a
 langcode: da
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.list_advanced
     - field.storage.node.body
-    - field.storage.node.field_image
     - field.storage.node.field_vih_course_image
     - field.storage.node.field_vih_course_periods
     - field.storage.node.field_vih_cp_start_date
@@ -191,70 +190,6 @@ display:
             timezone_override: ''
             format_type: medium
           group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_image:
-          id: field_image
-          table: node__field_image
-          field: field_image
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: true
-            text: "<div class=\"image-with-overlay\">\n<div class=\"image-overlay\">{{ field_vih_course_periods }}</div>\n{{ field_image }}\n</div>"
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: image
-          settings:
-            image_style: nyhedsformat
-            image_link: ''
-          group_column: ''
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -593,7 +528,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_vih_course_image'
         - 'config:field.storage.node.field_vih_course_periods'
         - 'config:field.storage.node.field_vih_cp_start_date'
@@ -662,7 +596,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_vih_course_image'
         - 'config:field.storage.node.field_vih_course_periods'
         - 'config:field.storage.node.field_vih_cp_start_date'
@@ -803,7 +736,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-        - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_vih_course_image'
         - 'config:field.storage.node.field_vih_course_periods'
         - 'config:field.storage.node.field_vih_cp_start_date'
