--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -6,9 +6,9 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.news.body
     - field.field.node.news.field_metatag
-    - field.field.node.news.field_news_tags
     - field.field.node.news.field_vih_banner
     - field.field.node.news.field_vih_image
+    - field.field.node.news.field_vih_news_tags
     - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
@@ -40,11 +40,11 @@ third_party_settings:
       region: content
     group_content:
       children:
-        - field_image
         - field_vih_image
         - body
         - field_vih_paragraphs
         - field_news_tags
+        - field_vih_news_tags
       parent_name: ''
       weight: 1
       format_type: tab
@@ -104,15 +104,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_news_tags:
-    weight: 22
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   field_vih_banner:
     type: entity_browser_file
     weight: 17
@@ -138,6 +129,15 @@ content:
       field_widget_edit: true
       view_mode: default
     region: content
+    third_party_settings: {  }
+  field_vih_news_tags:
+    type: entity_reference_autocomplete
+    weight: 23
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   field_vih_paragraphs:
     weight: 21
