--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -5,9 +5,9 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_metatag
-    - field.field.node.news.field_news_tags
     - field.field.node.news.field_vih_banner
     - field.field.node.news.field_vih_image
+    - field.field.node.news.field_vih_news_tags
     - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - image.style.banner_small
@@ -44,14 +44,6 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_news_tags:
-    weight: 4
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_banner:
     weight: 6
     label: hidden
@@ -62,7 +54,7 @@ content:
     type: image
     region: content
   field_vih_image:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       image_style: banner_small
@@ -70,6 +62,14 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_news_tags:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
   field_vih_paragraphs:
     weight: 5
     label: hidden
