--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -6,9 +6,9 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
     - field.field.node.news.field_metatag
-    - field.field.node.news.field_news_tags
     - field.field.node.news.field_vih_banner
     - field.field.node.news.field_vih_image
+    - field.field.node.news.field_vih_news_tags
     - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
@@ -45,9 +45,9 @@ content:
     third_party_settings: {  }
 hidden:
   field_metatag: true
-  field_news_tags: true
   field_vih_banner: true
   field_vih_image: true
+  field_vih_news_tags: true
   langcode: true
   links: true
   scheduled_update: true
