--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.user_quote.field_author
     - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
+    - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - paragraphs.paragraphs_type.user_quote
@@ -40,14 +40,6 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_author:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_background_color:
     type: options_select
     weight: 5
@@ -69,7 +61,7 @@ content:
     third_party_settings: {  }
   field_paragraph_person_photo:
     type: entity_browser_file
-    weight: 3
+    weight: 4
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -82,10 +74,18 @@ content:
     third_party_settings: {  }
   field_paragraph_text:
     type: text_textarea
-    weight: 2
+    weight: 3
     region: content
     settings:
       rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_vih_author:
+    type: string_textfield
+    weight: 2
+    region: content
+    settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   field_vih_heading:
