--- a/config/sync/field.field.paragraph.1_column_action_centered.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.1_column_action_centered.field_vih_background_color.yml
@@ -1,14 +1,14 @@
-uuid: 38b51208-fe6e-4155-b46c-12c14d5c28fe
+uuid: 0e4d2393-2add-43a0-a495-c935c30412f9
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_color
+    - field.storage.paragraph.field_vih_background_color
     - paragraphs.paragraphs_type.1_column_action_centered
   module:
     - options
-id: paragraph.1_column_action_centered.field_background_color
-field_name: field_background_color
+id: paragraph.1_column_action_centered.field_vih_background_color
+field_name: field_vih_background_color
 entity_type: paragraph
 bundle: 1_column_action_centered
 label: Baggrundsfarve
