--- a/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.class_packages.field_background_color
     - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_class_id
+    - field.field.paragraph.class_packages.field_vih_background_color
     - field.field.paragraph.class_packages.field_vih_heading
     - field.field.paragraph.class_packages.field_vih_link
     - image.style.paragraph_background_image
@@ -13,13 +13,14 @@ dependencies:
   module:
     - image
     - link
+    - options
 id: paragraph.class_packages.default
 targetEntityType: paragraph
 bundle: class_packages
 mode: default
 content:
   field_background_image:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       image_style: paragraph_background_image
@@ -27,8 +28,15 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_background_color:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -36,7 +44,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 4
+    weight: 2
     label: hidden
     settings:
       trim_length: 80
@@ -48,5 +56,4 @@ content:
     type: link
     region: content
 hidden:
-  field_background_color: true
   field_class_id: true
