--- a/config/sync/core.entity_view_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.file.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.file.field_background_color
     - field.field.paragraph.file.field_background_image
     - field.field.paragraph.file.field_description
+    - field.field.paragraph.file.field_vih_background_color
     - field.field.paragraph.file.field_vih_heading
     - field.field.paragraph.file.field_vih_link
     - field.field.paragraph.file.file
@@ -13,6 +13,7 @@ dependencies:
   module:
     - file
     - link
+    - options
     - text
 id: paragraph.file.default
 targetEntityType: paragraph
@@ -20,14 +21,21 @@ bundle: file
 mode: default
 content:
   field_description:
-    weight: 2
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
+  field_vih_background_color:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -35,7 +43,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 5
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -48,11 +56,10 @@ content:
     region: content
   file:
     type: file_default
-    weight: 3
+    weight: 2
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_background_color: true
   field_background_image: true
