--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -3,14 +3,15 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.gallery.field_background_color
     - field.field.paragraph.gallery.field_background_image
     - field.field.paragraph.gallery.field_images
+    - field.field.paragraph.gallery.field_vih_background_color
     - field.field.paragraph.gallery.field_vih_heading
     - field.field.paragraph.gallery.field_vih_link
     - paragraphs.paragraphs_type.gallery
   module:
     - link
+    - options
     - photoswipe
 id: paragraph.gallery.default
 targetEntityType: paragraph
@@ -18,7 +19,7 @@ bundle: gallery
 mode: default
 content:
   field_images:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       photoswipe_node_style: gallery_thumbnail
@@ -28,8 +29,15 @@ content:
     third_party_settings: {  }
     type: photoswipe_field_formatter
     region: content
+  field_vih_background_color:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -37,7 +45,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 4
+    weight: 2
     label: hidden
     settings:
       trim_length: null
@@ -49,5 +57,4 @@ content:
     type: link
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
