--- a/config/sync/field.field.paragraph.gallery.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.gallery.field_vih_background_color.yml
@@ -1,23 +1,21 @@
-uuid: 8f41361b-786b-4063-b481-09cce059d4d7
+uuid: 0325acfd-0f7a-4254-9765-41489516cd6c
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_color
+    - field.storage.paragraph.field_vih_background_color
     - paragraphs.paragraphs_type.gallery
   module:
     - options
-id: paragraph.gallery.field_background_color
-field_name: field_background_color
+id: paragraph.gallery.field_vih_background_color
+field_name: field_vih_background_color
 entity_type: paragraph
 bundle: gallery
 label: Baggrundsfarve
 description: ''
 required: false
 translatable: true
-default_value:
-  -
-    value: white
+default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: list_string
