--- a/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.list_of_news_teasers.field_background_color
     - field.field.paragraph.list_of_news_teasers.field_background_image
     - field.field.paragraph.list_of_news_teasers.field_tags
+    - field.field.paragraph.list_of_news_teasers.field_vih_background_color
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
     - paragraphs.paragraphs_type.list_of_news_teasers
   module:
@@ -19,6 +19,7 @@ third_party_settings:
       children:
         - field_background_image
         - field_background_color
+        - field_vih_background_color
       parent_name: ''
       weight: 3
       format_type: tab
@@ -35,12 +36,6 @@ targetEntityType: paragraph
 bundle: list_of_news_teasers
 mode: default
 content:
-  field_background_color:
-    weight: 5
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_background_image:
     type: entity_browser_file
     weight: 4
@@ -56,6 +51,12 @@ content:
     region: content
   field_tags:
     weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_vih_background_color:
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
