--- a/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
@@ -3,18 +3,27 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.list_of_news_teasers.field_background_color
     - field.field.paragraph.list_of_news_teasers.field_background_image
     - field.field.paragraph.list_of_news_teasers.field_tags
+    - field.field.paragraph.list_of_news_teasers.field_vih_background_color
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
     - paragraphs.paragraphs_type.list_of_news_teasers
+  module:
+    - options
 id: paragraph.list_of_news_teasers.default
 targetEntityType: paragraph
 bundle: list_of_news_teasers
 mode: default
 content:
-  field_vih_heading:
+  field_vih_background_color:
     weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_vih_heading:
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -22,6 +31,5 @@ content:
     type: string
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
   field_tags: true
