--- a/config/sync/field.field.paragraph.long_course_list_.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.long_course_list_.field_vih_background_color.yml
@@ -1,14 +1,14 @@
-uuid: 7f9481da-face-42b0-8309-f1cc44b8dc1e
+uuid: 94ec7790-2527-4bf1-82c3-4112f70f86d1
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_color
+    - field.storage.paragraph.field_vih_background_color
     - paragraphs.paragraphs_type.long_course_list_
   module:
     - options
-id: paragraph.long_course_list_.field_background_color
-field_name: field_background_color
+id: paragraph.long_course_list_.field_vih_background_color
+field_name: field_vih_background_color
 entity_type: paragraph
 bundle: long_course_list_
 label: Baggrundsfarve
