--- a/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
@@ -3,21 +3,29 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.short_course_list_.field_background_color
     - field.field.paragraph.short_course_list_.field_background_image
     - field.field.paragraph.short_course_list_.field_course_id
+    - field.field.paragraph.short_course_list_.field_vih_background_color
     - field.field.paragraph.short_course_list_.field_vih_heading
     - field.field.paragraph.short_course_list_.field_vih_link
     - paragraphs.paragraphs_type.short_course_list_
   module:
     - link
+    - options
 id: paragraph.short_course_list_.default
 targetEntityType: paragraph
 bundle: short_course_list_
 mode: default
 content:
+  field_vih_background_color:
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -25,7 +33,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 3
+    weight: 1
     label: hidden
     settings:
       trim_length: null
@@ -37,6 +45,5 @@ content:
     type: link
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
   field_course_id: true
