--- a/config/sync/field.field.paragraph.short_course_list_.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.short_course_list_.field_vih_background_color.yml
@@ -1,14 +1,14 @@
-uuid: e40f8a19-facb-481c-9b67-e0d5137afcb1
+uuid: a44905dc-c032-440c-a7b6-9872ccd0b44b
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_color
+    - field.storage.paragraph.field_vih_background_color
     - paragraphs.paragraphs_type.short_course_list_
   module:
     - options
-id: paragraph.short_course_list_.field_background_color
-field_name: field_background_color
+id: paragraph.short_course_list_.field_vih_background_color
+field_name: field_vih_background_color
 entity_type: paragraph
 bundle: short_course_list_
 label: Baggrundsfarve
