--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
+    - field.field.paragraph.user_quote.field_vih_background_color
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - paragraphs.paragraphs_type.user_quote
@@ -23,6 +23,7 @@ third_party_settings:
     group_appearance:
       children:
         - field_background_color
+        - field_vih_background_color
         - field_background_image
       parent_name: ''
       weight: 6
@@ -40,15 +41,9 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_background_color:
-    type: options_select
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_background_image:
     type: entity_browser_file
-    weight: 6
+    weight: 7
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -88,6 +83,12 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_vih_background_color:
+    weight: 6
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_vih_heading:
     weight: 0
     settings:
