--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -3,11 +3,11 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
+    - field.field.paragraph.user_quote.field_vih_background_color
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - image.style.vih_person_teaser
@@ -15,6 +15,7 @@ dependencies:
   module:
     - image
     - link
+    - options
     - text
 id: paragraph.user_quote.default
 targetEntityType: paragraph
@@ -39,12 +40,19 @@ content:
     third_party_settings: {  }
   field_vih_author:
     type: string
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  field_vih_background_color:
+    weight: 5
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -66,5 +74,4 @@ content:
     type: link
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
