--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.video.field_background_color
     - field.field.paragraph.video.field_background_image
     - field.field.paragraph.video.field_description
     - field.field.paragraph.video.field_highlighted
     - field.field.paragraph.video.field_video
+    - field.field.paragraph.video.field_vih_background_color
     - field.field.paragraph.video.field_vih_heading
     - paragraphs.paragraphs_type.video
   module:
@@ -23,6 +23,7 @@ third_party_settings:
       children:
         - field_background_image
         - field_background_color
+        - field_vih_background_color
       parent_name: ''
       weight: 5
       format_type: tab
@@ -39,12 +40,6 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_background_color:
-    weight: 5
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_background_image:
     type: entity_browser_file
     weight: 4
@@ -79,6 +74,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: video_embed_field_textfield
+    region: content
+  field_vih_background_color:
+    weight: 6
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_vih_heading:
     weight: 1
