--- a/config/sync/core.entity_view_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.video.default.yml
@@ -3,14 +3,15 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.video.field_background_color
     - field.field.paragraph.video.field_background_image
     - field.field.paragraph.video.field_description
     - field.field.paragraph.video.field_highlighted
     - field.field.paragraph.video.field_video
+    - field.field.paragraph.video.field_vih_background_color
     - field.field.paragraph.video.field_vih_heading
     - paragraphs.paragraphs_type.video
   module:
+    - options
     - text
     - video_embed_field
 id: paragraph.video.default
@@ -19,21 +20,21 @@ bundle: video
 mode: default
 content:
   field_description:
-    weight: 2
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_highlighted:
-    weight: 3
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_video:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       responsive: true
@@ -43,8 +44,15 @@ content:
     third_party_settings: {  }
     type: video_embed_field_video
     region: content
+  field_vih_background_color:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -52,5 +60,4 @@ content:
     type: string
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
