--- a/config/sync/field.field.paragraph.vih_class_groups_accordion.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_class_groups_accordion.field_vih_background_color.yml
@@ -1,14 +1,14 @@
-uuid: 23b1e2dd-98a8-4474-953c-562761fc7c9f
+uuid: 586e81ca-ae5f-4275-a316-37bad7ea8160
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_color
+    - field.storage.paragraph.field_vih_background_color
     - paragraphs.paragraphs_type.vih_class_groups_accordion
   module:
     - options
-id: paragraph.vih_class_groups_accordion.field_background_color
-field_name: field_background_color
+id: paragraph.vih_class_groups_accordion.field_vih_background_color
+field_name: field_vih_background_color
 entity_type: paragraph
 bundle: vih_class_groups_accordion
 label: Baggrundsfarve
