--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -3,16 +3,17 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.vih_teacher_class_description.field_background_color
     - field.field.paragraph.vih_teacher_class_description.field_background_image
     - field.field.paragraph.vih_teacher_class_description.field_description
     - field.field.paragraph.vih_teacher_class_description.field_paragraph_user
     - field.field.paragraph.vih_teacher_class_description.field_photo
+    - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - image
+    - options
     - text
 id: paragraph.vih_teacher_class_description.default
 targetEntityType: paragraph
@@ -20,7 +21,7 @@ bundle: vih_teacher_class_description
 mode: default
 content:
   field_description:
-    weight: 3
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -35,8 +36,15 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_background_color:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -44,6 +52,5 @@ content:
     type: string
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
   field_paragraph_user: true
