--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.embedded.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.embedded.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.embedded
-    - field.field.paragraph.vih_teacher_class_description.field_background_color
     - field.field.paragraph.vih_teacher_class_description.field_background_image
     - field.field.paragraph.vih_teacher_class_description.field_description
     - field.field.paragraph.vih_teacher_class_description.field_paragraph_user
     - field.field.paragraph.vih_teacher_class_description.field_photo
+    - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.vih_teacher_class_description
@@ -37,7 +37,7 @@ content:
     type: image
     region: content
 hidden:
-  field_background_color: true
   field_background_image: true
   field_paragraph_user: true
+  field_vih_background_color: true
   field_vih_heading: true
