--- a/config/sync/field.field.paragraph.vih_teacher_class_description.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_teacher_class_description.field_vih_background_color.yml
@@ -1,20 +1,20 @@
-uuid: 240c076e-7082-44d6-8744-b6188c4bf6d0
+uuid: 2d8e631c-8ee2-44bb-80d5-f854ba4f4aa8
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_color
+    - field.storage.paragraph.field_vih_background_color
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - options
-id: paragraph.vih_teacher_class_description.field_background_color
-field_name: field_background_color
+id: paragraph.vih_teacher_class_description.field_vih_background_color
+field_name: field_vih_background_color
 entity_type: paragraph
 bundle: vih_teacher_class_description
 label: Baggrundsfarve
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
