--- a/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
@@ -3,8 +3,8 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.vih_webform.field_background_color
     - field.field.paragraph.vih_webform.field_background_image
+    - field.field.paragraph.vih_webform.field_vih_background_color
     - field.field.paragraph.vih_webform.field_vih_heading
     - field.field.paragraph.vih_webform.field_vih_webform
     - image.style.paragraph_background_image
@@ -18,15 +18,8 @@ targetEntityType: paragraph
 bundle: vih_webform
 mode: default
 content:
-  field_background_color:
-    weight: 3
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
   field_background_image:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       image_style: paragraph_background_image
@@ -34,8 +27,15 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_background_color:
+    weight: 3
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
