--- a/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.social_media_embed.field_background_color
     - field.field.paragraph.social_media_embed.field_background_image
     - field.field.paragraph.social_media_embed.field_embed
+    - field.field.paragraph.social_media_embed.field_vih_background_color
     - field.field.paragraph.social_media_embed.field_vih_heading
     - field.field.paragraph.social_media_embed.field_vih_link
     - paragraphs.paragraphs_type.social_media_embed
@@ -20,6 +20,7 @@ third_party_settings:
     group_appearance:
       children:
         - field_background_color
+        - field_vih_background_color
         - field_background_image
       parent_name: ''
       weight: 4
@@ -37,14 +38,8 @@ targetEntityType: paragraph
 bundle: social_media_embed
 mode: default
 content:
-  field_background_color:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_background_image:
-    weight: 3
+    weight: 4
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -63,6 +58,12 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_vih_background_color:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_vih_heading:
     weight: 0
