VI-179 paragraph Fag medier field_vih_subheading settings

--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
+    - field.field.taxonomy_term.vih_class.field_vih_subheading
     - taxonomy.vocabulary.vih_class
   module:
     - entity_browser
@@ -28,7 +28,7 @@ third_party_settings:
       children:
         - field_vih_heading
         - field_subheading
-        - field_paragraphs
+        - field_vih_subheading
         - field_vih_paragraphs
       parent_name: ''
       weight: 2
@@ -112,14 +112,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_subheading:
-    weight: 17
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_vih_banner:
     type: entity_browser_file
     weight: 15
@@ -196,6 +188,14 @@ content:
       add_mode: modal
       form_display_mode: default
       default_paragraph_type: 1_column_action_centered
+    third_party_settings: {  }
+  field_vih_subheading:
+    type: string_textfield
+    weight: 18
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   langcode:
     type: language_select
