--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -13,6 +12,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
+    - field.field.taxonomy_term.vih_class.field_vih_subheading
     - image.style.banner_small
     - taxonomy.vocabulary.vih_class
   module:
@@ -35,7 +35,7 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -45,14 +45,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
-    region: content
-  field_subheading:
-    weight: 2
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
   field_vih_banner:
     weight: 0
@@ -65,7 +57,7 @@ content:
     region: content
   field_vih_class_class_packages:
     type: entity_reference_entity_view
-    weight: 6
+    weight: 7
     region: content
     label: hidden
     settings:
@@ -73,7 +65,7 @@ content:
       link: false
     third_party_settings: {  }
   field_vih_class_material_price:
-    weight: 5
+    weight: 6
     label: above
     settings:
       thousand_separator: ''
@@ -84,7 +76,7 @@ content:
     type: number_decimal
     region: content
   field_vih_class_price_addition:
-    weight: 4
+    weight: 5
     label: above
     settings:
       thousand_separator: ''
@@ -110,6 +102,14 @@ content:
     settings:
       view_mode: default
       link: ''
+    third_party_settings: {  }
+  field_vih_subheading:
+    type: string
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
 hidden:
   field_vih_class_color: true
