--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.list_advanced
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
+    - field.field.taxonomy_term.vih_class.field_vih_subheading
     - image.style.list_advanced
     - taxonomy.vocabulary.vih_class
   module:
@@ -58,11 +58,11 @@ content:
     third_party_settings: {  }
 hidden:
   field_metatag: true
-  field_subheading: true
   field_vih_banner: true
   field_vih_class_class_packages: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
   field_vih_heading: true
   field_vih_paragraphs: true
+  field_vih_subheading: true
   langcode: true
