--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.teaser.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.teaser
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
+    - field.field.taxonomy_term.vih_class.field_vih_subheading
     - image.style.vih_class_teaser_large
     - taxonomy.vocabulary.vih_class
   module:
@@ -43,7 +43,6 @@ content:
     region: content
 hidden:
   field_metatag: true
-  field_subheading: true
   field_vih_banner: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
@@ -51,4 +50,5 @@ hidden:
   field_vih_class_price_addition: true
   field_vih_heading: true
   field_vih_paragraphs: true
+  field_vih_subheading: true
   langcode: true
