--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser_modal.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser_modal.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_table_teaser_modal
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
+    - field.field.taxonomy_term.vih_class.field_vih_subheading
     - image.style.vih_class_teaser
     - taxonomy.vocabulary.vih_class
   module:
@@ -49,7 +49,6 @@ content:
     third_party_settings: {  }
 hidden:
   field_metatag: true
-  field_subheading: true
   field_vih_banner: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
@@ -57,4 +56,5 @@ hidden:
   field_vih_class_price_addition: true
   field_vih_heading: true
   field_vih_paragraphs: true
+  field_vih_subheading: true
   langcode: true
